[gd_scene load_steps=5 format=3 uid="uid://i525unvf7751"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_mkyx1"]
[ext_resource type="Texture2D" uid="uid://l0k2p31tqbxa" path="res://hud/arrow.png" id="2_eltau"]
[ext_resource type="Texture2D" uid="uid://bugijijl84u3c" path="res://hud/arrow_vertical.png" id="3_rg3ug"]
[ext_resource type="Texture2D" uid="uid://pvqudvnvfftq" path="res://cone/cone.png" id="4_y144h"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mkyx1")

[node name="Background" type="ColorRect" parent="."]
z_index = 18
z_as_relative = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.898039, 0.878431, 0.356863, 1)

[node name="Tutorial" type="VBoxContainer" parent="."]
z_index = 20
z_as_relative = false
layout_mode = 1
offset_left = 67.0
offset_top = 150.0
offset_right = 653.0
offset_bottom = 380.0
theme_override_constants/separation = 30
alignment = 1

[node name="MoveKeys" type="HBoxContainer" parent="Tutorial"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LeftArrow" type="TextureRect" parent="Tutorial/MoveKeys"]
layout_mode = 2
texture = ExtResource("2_eltau")
flip_h = true

[node name="RightArrow" type="TextureRect" parent="Tutorial/MoveKeys"]
layout_mode = 2
texture = ExtResource("2_eltau")

[node name="MoveLabel" type="Label" parent="Tutorial/MoveKeys"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "MOVEMENT"

[node name="JumpKey" type="HBoxContainer" parent="Tutorial"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="UpArrow" type="TextureRect" parent="Tutorial/JumpKey"]
layout_mode = 2
texture = ExtResource("3_rg3ug")

[node name="UpArrow2" type="TextureRect" parent="Tutorial/JumpKey"]
layout_mode = 2
texture = ExtResource("4_y144h")
flip_h = true

[node name="JumpLabel" type="Label" parent="Tutorial/JumpKey"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "JUMPING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndGameContainer" type="VBoxContainer" parent="."]
z_index = 20
z_as_relative = false
layout_mode = 0
offset_left = 54.0
offset_top = 600.0
offset_right = 606.0
offset_bottom = 791.0
alignment = 1

[node name="GameEndLabel" type="Label" parent="EndGameContainer"]
visibility_layer = 2
z_index = 10
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "You Lost!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="EndGameContainer"]
z_index = 20
z_as_relative = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="ExitButton" type="Button" parent="EndGameContainer"]
z_index = 20
z_as_relative = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="GameWinBar" type="ColorRect" parent="."]
z_index = 20
z_as_relative = false
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 117.0
offset_bottom = 56.0
color = Color(0, 0.648447, 1.92523e-07, 1)

[node name="GameWinBarBG" type="ColorRect" parent="GameWinBar"]
z_index = 19
z_as_relative = false
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0

[connection signal="pressed" from="EndGameContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="EndGameContainer/ExitButton" to="." method="_on_exit_button_pressed"]
